; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-common/file/extr_config_file.c_config_get_string.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-common/file/extr_config_file.c_config_get_string.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.config_entry_list = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @config_get_string(i32* %0, i8* %1, i8** %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8**, align 8
  %8 = alloca %struct.config_entry_list*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8** %2, i8*** %7, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = call %struct.config_entry_list* @config_get_entry(i32* %9, i8* %10, i32* null)
  store %struct.config_entry_list* %11, %struct.config_entry_list** %8, align 8
  %12 = load %struct.config_entry_list*, %struct.config_entry_list** %8, align 8
  %13 = icmp ne %struct.config_entry_list* %12, null
  br i1 %13, label %15, label %14

14:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %21

15:                                               ; preds = %3
  %16 = load %struct.config_entry_list*, %struct.config_entry_list** %8, align 8
  %17 = getelementptr inbounds %struct.config_entry_list, %struct.config_entry_list* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i8* @strdup(i32 %18)
  %20 = load i8**, i8*** %7, align 8
  store i8* %19, i8** %20, align 8
  store i32 1, i32* %4, align 4
  br label %21

21:                                               ; preds = %15, %14
  %22 = load i32, i32* %4, align 4
  ret i32 %22
}

declare dso_local %struct.config_entry_list* @config_get_entry(i32*, i8*, i32*) #1

declare dso_local i8* @strdup(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
